{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 10,
  "lineage": "b75788a7-6d3c-b5f2-a390-021fe9321c4d",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.42.1.0/24",
            "address_prefixes": [
              "10.42.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/virtualNetworks/taco-wagon-app/subnets/app",
            "name": "app",
            "private_endpoint_network_policies": "Disabled",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "944-f68f32e5-using-the-virtual-machine-module",
            "virtual_network_name": "taco-wagon-app"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/networkInterfaces/taco-wagon-app-nic|/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/networkSecurityGroups/nsg-taco-wagon-app",
            "network_interface_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/networkInterfaces/taco-wagon-app-nic",
            "network_security_group_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/networkSecurityGroups/nsg-taco-wagon-app"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.app",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.app",
            "module.linux.azurerm_network_interface.vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/networkSecurityGroups/nsg-taco-wagon-app",
            "location": "westus",
            "name": "nsg-taco-wagon-app",
            "resource_group_name": "944-f68f32e5-using-the-virtual-machine-module",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/networkSecurityGroups/nsg-taco-wagon-app/securityRules/http",
            "name": "http",
            "network_security_group_name": "nsg-taco-wagon-app",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "944-f68f32e5-using-the-virtual-machine-module",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/publicIPAddresses/pip-taco-wagon-app",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.64.228.4",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "pip-taco-wagon-app",
            "resource_group_name": "944-f68f32e5-using-the-virtual-machine-module",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/networkInterfaces/taco-wagon-app-nic",
            "internal_domain_name_suffix": "bxtgbaxqmswuxnkcknizqdaa1g.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "taco-wagon-app-nic0",
                "primary": true,
                "private_ip_address": "10.42.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/publicIPAddresses/pip-taco-wagon-app",
                "subnet_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Network/virtualNetworks/taco-wagon-app/subnets/app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "60-45-BD-06-46-DC",
            "name": "taco-wagon-app-nic",
            "private_ip_address": "10.42.1.4",
            "private_ip_addresses": [
              "10.42.1.4"
            ],
            "resource_group_name": "944-f68f32e5-using-the-virtual-machine-module",
            "tags": {
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/944-f68f32e5-using-the-virtual-machine-module/providers/Microsoft.Compute/virtualMachines/taco-wagon-app"
          },
          "dependencies": [
            "azurerm_public_ip.app",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.app"
          ]
        }
      ]
    }
  ]
}